# Onnoji

./: README.md  meson.build
client/: package-lock.json  package.json
client-1.0.0/: package-lock.json  package.json
client-1.0.0/public/: index.html
client-1.0.0/src/: AlbumData.css  AlbumData.js  Albums.js  AllSongs.js  App.css  App.js  ArtistAlbums.js  Artists.js  GenreAlbums.js  Genres.css  Genres.js  LinkButton.js  NaviItem.js  RecentlyCreatedAlbums.js  RecentlyRequestedAlbums.js  RoundButton.js  Songs.js  conf.json  index.css
client/public/: config.json  index.html
client/src/: AlbumData.js  Albums.css  Albums.js  AllSongs.js  App-middle.css  App-narrow.css  App-wider.css  App.css  App.js  ArtistAlbums.js  Artists.js  GenreAlbums.js  Genres.css  Genres.js  LinkButton.js  LogWindow.css  LogWindow.js  MessageBox.js  Navi.js  NaviItem.js  Optional.js  RecentlyCreatedAlbums.js  RecentlyRequestedAlbums.js  RoundButton.js  SelectGenreDialog.js  Songs.css  Songs.js  UploadDialog.css  UploadDialog.js  UploadPage.js  WaitingSpin.js  conf.json  useMediaQuery.js
reorg/: ReorgContext.vala  reorg.vala
resources/: onnoji-resources.xml
resources/main/: application.properties  html-resources.xml
resources/sql/: repository.xml
sql/: ddl-postgres.sql
src/batch/: BatchTask.vala  OnnojiBatch.vala
src/common/: AlbumData.vala  AlbumDataEx.vala  Albums.vala  ArtistData.vala  Artists.vala  DirectoryReader.vala  FileInfo.vala  FileInfoAdapter.vala  FileType.vala  GenreData.vala  Genres.vala  History.vala  HistoryData.vala  MetadataReader.vala  OnnojiConstants.vala  OnnojiError.vala  OnnojiFileUtils.vala  OnnojiPaths.vala  ProgramName.vala  ResourceManager.vala  SongData.vala  Songs.vala  SqliteUtils.vala  Values.vala  XmlResourceManager.vala  functions.vala  match-paths.c  timestamp.c
src/context/: ApplicationContext.vala  RealApplicationContext.vala
src/entity/: Artist.vala  Artwork.vala  Genre.vala  History.vala  Playlist.vala  Song.vala
src/repository/: ArtistRepository.vala  ArtistRepositoryImpl.vala  ArtworkRepository.vala  ArtworkRepositoryImpl.vala  BasicRepositoryImpl.vala  GenreRepository.vala  GenreRepositoryImpl.vala  HistoryRepository.vala  HistoryRepositoryImpl.vala  PlaylistRepository.vala  PlaylistRepositoryImpl.vala  RequiredRelation.vala  SongRepository.vala  SongRepositoryImpl.vala  SqlConditionType.vala  SqlInsertFlags.vala
src/server/: MusicDataProducer.vala  MusicDataProducerImpl1.vala  Onnoji.vala  OnnojiActionHandler.vala  OnnojiThreadData.vala  OnnojiUtils.vala  PostFileData.vala  ResponseJsonMaker.vala  ServiceResponse.vala
tests/: common-tests.vala  context-test.vala  gstreamer-test.vala  producer-test.vala  repository-test.vala  resource-test.vala
tests/context/: ProducerTestContext.vala  RepositoryTestContext.vala  ResourceTestContext.vala  TestApplicationContext.vala
tests/repository/: ArtistTest.vala  GenreTest.vala  HistoryTest.vala  Mocks.vala  PlaylistTest.vala  SongTest.vala
